Update EnumPropertyAgent